<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mobile Services</string>
    <string name="Map">Map</string>
    <string name="SearchHint">Enter Address</string>
    <string name="route">Create route to this place</string>
    <string name="routeError">Error generating routing. Verify that both points are reachable</string>
    <string name="noRouteData">2 points are necessary to create a route</string>
    <string name="next">Next</string>
    <string name="choseService">Chose your service:</string>
    <string name="serviceOptions">How can we help you?</string>
    <string name="currentSet">Current location set as Origin</string>
    <string name="originSet">Marker set as Origin</string>
    <string name="destinationSet">Marker set as Destination</string>
    <string name="locationSetError">Error setting marker. Verify that a marker exists</string>
    <string name="title_activity_provider_map">Provider Map</string>
    <string name="btn_accept">Accept job</string>
    <string name="btn_cancel">Cancel job</string>
    <string name="mapReady">Map ready</string>
    <string name="myLocation">Current location</string>
    <string name="aDistance">Distance: </string>
    <string name="request">Request Service</string>
    <string name="requestSent">Request Sent</string>

    <string name="searchPlace">Search a Place</string>

    <string-array name="sLabels">
        <item>Personal transport</item>
        <item>Parcel Service</item>
        <item>Pay bills</item>
        <item>Road support</item>
        <item>Order food</item>
    </string-array>

    <!--Services-->
    <!--Personal Transport-->
    <string name="ptHelp">Order a personal transport service by choosing your destination. By default, you current location is used as the origin point, bu you can choose a different one.</string>
    <!--Parcel Service-->
    <string name="psLabel">Choose the mode of your shipment</string>
    <string name="psHelp">Choose the way you want your package to be shipped</string>
    <string name="ps1Help">The shipment will be made from your current location or a custom origin to the marker set on the map.</string>
    <string name="ps2Help">The package will be sent from the marker on the map to your current location.</string>
    <string name="psFromCurrent">From current or custom location to marker on map</string>
    <string name="psFromMarker">From marker on map to current location</string>
    <!--Pay Bills-->
    <string name="pbHelp">Order a paying bill service. Select the place where your bill has to be paid. By default, the bill is received in your current location, but you can change the origin point.</string>
    <!--Road support-->
    <string name="rsHelp">Choose what kind of help you need.</string>
    <string name="rsDeflatedTire">Deflated Tire</string>
    <string name="rsNoGas">No Gas</string>
    <string name="rsLeak">Water/Oil Leak</string>
    <string name="rsBrakeFail">Brakes Failure</string>
    <string name="rsBattery">Dead Battery</string>
    <!--OrderFood-->
    <string name="ofLabel">Please place your order.</string>
    <string name="ofHelp">Place a food order by selecting a restaruant to place your order. By default, your order is delivered to your current location but you can set a different delivering location.</string>

    <!--Place Info-->
    <string name="address">Address: </string>
    <string name="phone">Phone number: </string>
    <string name="webSite">Web Site: </string>
    <string name="rating">Rating: </string>
</resources>
