<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.uach.newcompass3.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/choseService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spservice"
        android:layout_width="211dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/slabels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnseguir"
        android:layout_width="115dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:onClick="showMap"
        android:text="@string/next"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/spservice"
        app:layout_constraintStart_toEndOf="@+id/spservice"
        app:layout_constraintTop_toTopOf="@+id/spservice"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/result"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Prueba de resultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clapoyo"
        android:layout_width="368dp"
        android:layout_height="352dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbvial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/serviceOptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chbponche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/rsDeflatedTire"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbvial" />

        <CheckBox
            android:id="@+id/chbgas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/rsNoGas"
            app:layout_constraintStart_toStartOf="@+id/chbponche"
            app:layout_constraintTop_toBottomOf="@+id/chbponche" />

        <CheckBox
            android:id="@+id/chbfuga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/rsLeak"
            app:layout_constraintStart_toStartOf="@+id/chbgas"
            app:layout_constraintTop_toBottomOf="@+id/chbgas" />

        <CheckBox
            android:id="@+id/chbfreno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/rsBrakeFail"
            app:layout_constraintStart_toStartOf="@+id/chbfuga"
            app:layout_constraintTop_toBottomOf="@+id/chbfuga" />

        <CheckBox
            android:id="@+id/chbbateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/rsBattery"
            app:layout_constraintStart_toStartOf="@+id/chbfreno"
            app:layout_constraintTop_toBottomOf="@+id/chbfreno" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/clcuentas"
        android:layout_width="368dp"
        android:layout_height="352dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/lbcuentas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/serviceOptions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="RadioButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbcuentas" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
